[tool.poetry]
name = "stackquiz"
version = "0.1.0"
description = ""
authors = ["Andrew Burke <atburke1985@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.9.0"
nltk = "^3.5"
torch = "^1.6.0"
motor = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
requests = "^2.24.0"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
